2006-10-04  Waldo Bastian <waldo.bastian@intel.com>
        * Deprecate %v, it is FSDevice specific

2006-08-30  Waldo Bastian <waldo.bastian@intel.com>
        * list FSDevice type as KDE specific
        * refer to Icon Theme Specification

2006-08-22  Waldo Bastian <waldo.bastian@intel.com>
        * clarification of Exec key
        * correction of StartupWMClass, clarify StartupNotify (Lubos Lunak)
        * deprecate SortOrder and FilePattern key (Vincent Untz)
        * remove section on "MIME Type caching" from spec (Vincent Untz)
        * groups and keys must be unique (Vincent Untz)
        See http://lists.freedesktop.org/archives/xdg/2006-August/008446.html

2006-05-28  Vincent Untz <vuntz@gnome.org>
        * cleanup of text and some reorg for clearity
        * move all of the legacy-mixed encoding stuff to the appendix
        * deprecate the Swallow* keys
        * improve definition of group headers
        * reorder the list of standard keys so they are sorted by type
        See http://lists.freedesktop.org/archives/xdg/2006-May/008131.html

Tue Jul 13 18:04:11 2004  Jonathan Blandford  <jrb@gnome.org>

	* desktop-entry-spec.xml: Update the MIME description to make it
	more relevent.

2004-04-19  Mark McLoughlin  <mark@skynet.ie>

	Pointed out by Ville Skyttä <ville.skytta@iki.fi>

	* desktop-entry-spec.xml: fix minor typo.

2004-04-18  Mark McLoughlin  <mark@skynet.ie>

	Patch from Ville Skyttä <ville.skytta@iki.fi>

	* desktop-entry-spec.xml: editorial changes, fixes for
	typos and general cleanups.

Mon Jul  7 18:26:14 2003  Owen Taylor  <otaylor@redhat.com>

	* destop-entry-spec.sgml: Merge changes by Havoc
	Pennington that had been made in web module:

	2002/04/20: add changes posted to xdg-list a while back

Sat Aug 24 17:00:48 2002  Owen Taylor  <otaylor@redhat.com>

	* desktop-entry-spec.sgml: In legacy-mixed table, fix duplicate 
	pt entry, language code for Armenian. Make explicit that