@@ -4,8 +4,8 @@
 <article id="index">
   <articleinfo>
     <title>Desktop Entry Specification</title>
-    <releaseinfo>Version 0.9.7</releaseinfo>
-	<date>16 Oct 2006</date>
+    <releaseinfo>Version 0.9.8</releaseinfo>
+	<date>31 Oct 2006</date>
     <authorgroup>
       <author>
 	<firstname>Preston</firstname>
@@ -562,7 +562,8 @@
       The executable program can either be specified with its full path or
       with the name of the executable only. If no full path is provided the
       executable is looked up in the $PATH used by the desktop environment.   
-      Arguments are separated by a space.
+      The name or path of the executable program may not contain the equal
+      sign ("="). Arguments are separated by a space.
     </para>
     <para>
       Arguments may be quoted in whole. If an argument contains a reserved
@@ -577,11 +578,11 @@
       additional backslash character. Implementations must undo quoting before
       expanding field codes and before passing the argument to the executable
       program. Reserved characters are space (" "), tab, newline, double
-      quote, single quote ("'"), greater-than sign ("&gt;"), less-than sign
-      ("&lt;"), tilde ("~"), vertical bar ("|"), ampersand ("&amp;"),
-      semicolon (";"), dollar sign ("$"), asterisk ("*"), question mark ("?"),
-      equal sign ("="), hash mark ("#"), parenthesis ("(") and (")") and
-      backtick character ("`").
+      quote, single quote ("'"), backslash character ("\"), 
+      greater-than sign ("&gt;"), less-than sign ("&lt;"),
+      tilde ("~"), vertical bar ("|"), ampersand ("&amp;"), semicolon (";"),
+      dollar sign ("$"), asterisk ("*"), question mark ("?"), hash mark ("#"),
+      parenthesis ("(") and (")") and backtick character ("`").
     </para>
     <para>
       Note that the general escape rule for values of type string states that
